// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FlowsheetDataGrid renders the row header column as pinned and remaining columns as overflow and all columns as not resizable 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    defaultColumnWidth={200}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    onClearSelection={[Function]}
    overflowColumns={
      Array [
        Object {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
        },
        Object {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
        },
      ]
    }
    pinnedColumns={
      Array [
        Object {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rowHeight="2.5rem"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": "Heart Rate Monitored (bpm)",
            },
            Object {
              "content": "65",
            },
            Object {
              "content": "66",
            },
          ],
          "id": "1",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Temperature Oral (degC)",
            },
            Object {
              "content": "36.7",
            },
            Object {
              "content": "36.9",
            },
          ],
          "id": "2",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Cardiac Index (L/min/m2)",
            },
            Object {
              "content": "2.25",
            },
            Object {
              "content": "2.28",
            },
          ],
          "id": "3",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Oxygen Flow Rate (L/min)",
            },
            Object {
              "content": "63",
            },
            Object {
              "content": "47",
            },
          ],
          "id": "4",
        },
      ]
    }
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;

exports[`FlowsheetDataGrid replaces non-header empty, null, or "--" cell contents with a "No results" visual indicator and hidden text 1`] = `
<div
  className="flowsheet-data-grid-container"
  onKeyUp={[Function]}
>
  <ForwardRef
    ariaLabel="Test Flowsheet Data Grid"
    columnHeaderHeight="2.5rem"
    defaultColumnWidth={200}
    id="test-terra-flowsheet-data-grid"
    onCellRangeSelect={[Function]}
    onCellSelect={[Function]}
    onClearSelection={[Function]}
    overflowColumns={
      Array [
        Object {
          "displayName": "March 16",
          "id": "Column-1",
          "isResizable": false,
        },
        Object {
          "displayName": "March 17",
          "id": "Column-2",
          "isResizable": false,
        },
      ]
    }
    pinnedColumns={
      Array [
        Object {
          "displayName": "Vitals",
          "id": "Column-0",
          "isResizable": false,
        },
      ]
    }
    rowHeaderIndex={0}
    rowHeight="2.5rem"
    rows={
      Array [
        Object {
          "cells": Array [
            Object {
              "content": "Heart Rate Monitored (bpm)",
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
            },
            Object {
              "content": "66",
            },
          ],
          "id": "1",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Temperature Oral (degC)",
            },
            Object {
              "content": "36.7",
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
            },
          ],
          "id": "2",
        },
        Object {
          "cells": Array [
            Object {
              "content": "Cardiac Index (L/min/m2)",
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
            },
            Object {
              "content": "2.28",
            },
          ],
          "id": "3",
        },
        Object {
          "cells": Array [
            Object {
              "content": "",
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
            },
            Object {
              "content": <React.Fragment>
                <span
                  aria-hidden={true}
                >
                  Terra.flowsheetDataGrid.no-result-display
                </span>
                <VisuallyHiddenText
                  text="Terra.flowsheetDataGrid.no-result"
                />
              </React.Fragment>,
            },
          ],
          "id": "4",
        },
      ]
    }
  />
  <VisuallyHiddenText
    aria-live="polite"
    text={null}
  />
</div>
`;
